Schema Servicios and Reserva in Service OK.

--- a/SGRH.Api/SGRH.Api.csproj
+++ b/SGRH.Api/SGRH.Api.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\SGRH.Application\SGRH.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\ServiciosController\" />
+  </ItemGroup>
+
 </Project>
