--- a/SGRH.Application/SGRH.Application.csproj
+++ b/SGRH.Application/SGRH.Application.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\SGRH.Percistence\SGRH.Percistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\habitacion\" />
+  </ItemGroup>
+
 </Project>
