Proceso de cambio OK.

--- a/SGRH.Api/SGRH.Api.csproj
+++ b/SGRH.Api/SGRH.Api.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SGRH.Application\SGRH.Application.csproj" />
+    <ProjectReference Include="..\SGRH.Percistence\SGRH.Percistence.csproj" />
   </ItemGroup>
 
 </Project>
