--- a/SGRH.Application/SGRH.Application.csproj
+++ b/SGRH.Application/SGRH.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="8.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SGRH.Domein\SGRH.Domein.csproj" />
   </ItemGroup>
 
